ADD_LIBRARY(MYODBCDbg MYODBCDbgConnectAttrString.c 
                MYODBCDbgConnectOptionString.c 
                MYODBCDbgDiagFieldString.c 
                MYODBCDbgEnvAttrString.c 
                MYODBCDbgFunctionsString.c 
                MYODBCDbgHandleTypeString.c 
                MYODBCDbgInfoTypeString.c 
                MYODBCDbgPosTypeString.c 
                MYODBCDbgReturnString.c 
                MYODBCDbgStmtAttrString.c 
                MYODBCDbgStmtOptionString.c 
                MYODBCDbgStmtTypeString.c 
                MYODBCDbgTransactionTypeString.c)



