noinst_LTLIBRARIES = libMYODBCDbg.la

libMYODBCDbg_la_SOURCES = \
	../include/MYODBCDbg.h \
	MYODBCDbgConnectAttrString.c \
	MYODBCDbgConnectOptionString.c \
	MYODBCDbgDiagFieldString.c \
	MYODBCDbgEnvAttrString.c \
	MYODBCDbgFunctionsString.c \
	MYODBCDbgHandleTypeString.c \
	MYODBCDbgInfoTypeString.c \
	MYODBCDbgPosTypeString.c \
	MYODBCDbgReturnString.c \
	MYODBCDbgStmtAttrString.c \
	MYODBCDbgStmtOptionString.c \
	MYODBCDbgStmtTypeString.c \
	MYODBCDbgTransactionTypeString.c

EXTRA_DIST = \
	MYODBCDbgLib.vpj \
	MYODBCDbgLib.pro
